Refactor Kubernetes manifests for consistency and clarity; update Tekton parameters and role permissions

--- a/k8s/postgres.yaml
+++ b/k8s/postgres.yaml
@@ -1,6 +1,8 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
+  labels:
+    app: postgres
   name: postgres
 spec:
   serviceName: postgres
@@ -16,7 +18,7 @@ spec:
     spec:
       containers:
         - name: postgres
-          image: postgres:13-alpine
+          image: postgres:alpine
           ports:
             - containerPort: 5432
           volumeMounts:
