--- a/k8s/backend.yaml
+++ b/k8s/backend.yaml
@@ -1,7 +1,9 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: backend-deployment
+  labels:
+    app: backend
+  name: backend
 spec:
   replicas: 1
   selector:
