--- a/tekton/pipeline.yaml
+++ b/tekton/pipeline.yaml
@@ -25,8 +25,8 @@ spec:
         - name: source
           workspace: shared-workspace
       params:
-        - name: IMAGE
-          value: "$(params.IMAGE)"
+        - name: image
+          value: "$(params.image)"
 
     - name: deploy
       runAfter: [build-and-push]
