Normalize parameter name casing in Tekton pipeline; add kind definition to build-and-push-task

--- a/tekton/pipeline.yaml
+++ b/tekton/pipeline.yaml
@@ -4,7 +4,7 @@ metadata:
   name: ci-cd-pipeline
 spec:
   params:
-    - name: IMAGE
+    - name: image
       type: string
       default: "docker.io/aramos20/myapi:latest"
   workspaces:
