--- a/tekton/tekton-infra.yaml
+++ b/tekton/tekton-infra.yaml
@@ -26,7 +26,7 @@ metadata:
 rules:
   - apiGroups: [""]
     resources: ["pods"]
-    verbs: ["get", "watch", "list"]
+    verbs: ["*"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
