--- a/tekton/tekton-infra.yaml
+++ b/tekton/tekton-infra.yaml
@@ -24,8 +24,8 @@ metadata:
   name: admin-role
   namespace: default
 rules:
-  - apiGroups: [""]
-    resources: ["pods"]
+  - apiGroups: ["*"]
+    resources: ["*"]
     verbs: ["*"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
