Reorder container properties in frontend and postgres YAML files for consistency; normalize parameter names in Tekton pipeline and tasks

--- a/k8s/frontend.yaml
+++ b/k8s/frontend.yaml
@@ -39,8 +39,8 @@ spec:
         environment: release
     spec:
       containers:
-        - name: frontend
-          image: nginx:alpine
+        - image: nginx:alpine
+          name: frontend
           resources:
             limits:
               memory: "128Mi"
