Refactor database connection to use environment variables directly; rename POSTGRES_PASSWORD to POSTGRES_PASS in postgres.yaml

--- a/k8s/postgres.yaml
+++ b/k8s/postgres.yaml
@@ -25,7 +25,7 @@ spec:
             - name: postgres-storage
               mountPath: /var/lib/postgresql/data
           env:
-            - name: POSTGRES_PASSWORD
+            - name: POSTGRES_PASS
               valueFrom:
                 secretKeyRef:
                   name: db-credentials
