--- a/k8s/postgres.yaml
+++ b/k8s/postgres.yaml
@@ -25,7 +25,7 @@ spec:
             - name: postgres-storage
               mountPath: /var/lib/postgresql/data
           env:
-            - name: POSTGRES_PASS
+            - name: POSTGRES_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: db-credentials
