--- a/tekton/tekton-config.yaml
+++ b/tekton/tekton-config.yaml
@@ -24,7 +24,7 @@ metadata:
   name: admin-role
   namespace: default
 rules:
-  - apiGroups: ["*"]
+  - apiGroups: [""]
     resources: ["*"]
     verbs: ["*"]
 ---
