--- a/tekton/pipelines/pipeline.yaml
+++ b/tekton/pipelines/pipeline.yaml
@@ -12,6 +12,7 @@ spec:
       workspaces:
         - name: output
           workspace: shared-workspace
+
     - name: build-and-push
       runAfter: [clone-repo]
       taskRef:
@@ -19,8 +20,14 @@ spec:
       workspaces:
         - name: source
           workspace: shared-workspace
-    - name: deploy
+
+    - name: start-tunnel
       runAfter: [build-and-push]
+      taskRef:
+        name: tunnel-task
+
+    - name: deploy
+      runAfter: [start-tunnel]
       taskRef:
         name: deploy-task
       workspaces:
