refactor(k8s): Update ingress and role configurations for improved service routing and permissions

--- a/tekton/security/role-binding.yaml
+++ b/tekton/security/role-binding.yaml
@@ -10,5 +10,5 @@ subjects:
     namespace: default
 roleRef:
   kind: Role
-  name: admin-role
+  name: tekton-pipeline-role
   apiGroup: rbac.authorization.k8s.io
