--- a/tekton/security/role-binding.yaml
+++ b/tekton/security/role-binding.yaml
@@ -1,14 +1,13 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: admin-rolebinding
+  name: tekton-deploy-rolebinding
   namespace: default
 subjects:
   - kind: ServiceAccount
     name: tekton-service-account
-    apiGroup: ""
     namespace: default
 roleRef:
   kind: Role
-  name: tekton-pipeline-role
+  name: tekton-deploy-role
   apiGroup: rbac.authorization.k8s.io
